[package]
  name    = "kubectl-kubewarden"
  version = "0.1.0"
  edition = "2021"
  authors = [ "Flavio Castelli <fcastelli@suse,com>" ]

[dependencies]
  anyhow = "1.0.56"
  base64 = "0.13.0"
  clap = { version = "3.1", features = [ "derive", "env" ] }
  k8s-openapi = { version = "0.14.0", features = ["api", "v1_23"] }
  kube-conf = "0.2.0"
  tracing                     = "0.1"
  tracing-subscriber          = { version = "0.3", features = ["fmt", "env-filter"] }
  term-table = "1.3.2"
  wit-bindgen-rust = { git = "https://github.com/bytecodealliance/wit-bindgen", rev = "f5eed0fb9f1087a2f8889194d0debeeafa789c88" }

[build-dependencies]
  wasi-outbound-http-defs = { git = "https://github.com/flavio/wasi-experimental-toolkit", branch = "wasi-outbount-http-add-request-config"}
