[package]
name    = "kubectl-kubewarden"
version = "0.1.0"
edition = "2021"
authors = [ "Flavio Castelli <fcastelli@suse,com>" ]

[dependencies]
anyhow = "1.0.57"
base64 = "0.13.0"
clap = { version = "3.1.11", features = [ "derive", "env" ] }
k8s-openapi = { version = "0.14.0", features = ["api", "v1_23"] }
kube-conf = "0.2.0"
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.11", features = ["fmt", "env-filter"] }
term-table = "1.3.2"
wit-bindgen-rust = { git = "https://github.com/bytecodealliance/wit-bindgen", rev = "f5eed0fb9f1087a2f8889194d0debeeafa789c88" }

[build-dependencies]
wasi-outbound-http-defs = { git = "https://github.com/flavio/wasi-experimental-toolkit", rev = "7321ff5a3735e4c9dd368c0abce733b1fce6fcaa" }
